# axum-oidc-client

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  LICENSE  PROVIDER_EXAMPLES.md  QUICK_REFERENCE.md  README.md  TOKEN_REFRESH.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
examples/: .env.azure.example  .env.github.example  .env.google.example  .env.keycloak.example  .env.mysql.example  .env.postgres.example  .env.redis.example  .env.sqlite.example  ENV_FILES_GUIDE.md  Makefile  README.md
examples/api-server/: Cargo.toml  Dockerfile  Makefile
examples/api-server/src/: main.rs
examples/api-server/src/layers/: mod.rs  require_jwt.rs
examples/api-server/src/routes/: health.rs  me.rs  mod.rs  protected.rs
examples/docker/: docker-compose.l1.yml  docker-compose.mysql.yml  docker-compose.postgres.yml  docker-compose.redis.yml  docker-compose.sqlite.yml
examples/docker/mysql-optimize-cron/: docker-entrypoint.sh
examples/docker/pg-vacuum-cron/: docker-entrypoint.sh
examples/docker/sqlite-vacuum-cron/: docker-entrypoint.sh  vacuum.sh
examples/sample-server/: .env.azure.example  .env.github.example  .env.google.example  .env.keycloak.example  .env.mysql.example  .env.postgres.example  .env.redis.example  .env.sqlite.example  Cargo.toml  ENV_FILES_GUIDE.md  Makefile  README.md
examples/sample-server/docker/: docker-compose.mysql.yml  docker-compose.postgres.yml  docker-compose.redis.yml  docker-compose.sqlite.yml
examples/sample-server/docker/mysql-optimize-cron/: Dockerfile  optimize.sh
examples/sample-server/docker/mysql/init/: 01_oidc_cache.sql
examples/sample-server/docker/optimize-cron/: Dockerfile  docker-entrypoint.sh  optimize.sh
examples/sample-server/docker/pg-vacuum-cron/: Dockerfile  vacuum.sh
examples/sample-server/docker/postgres/init/: 01_oidc_cache.sql
examples/sample-server/docker/sqlite-vacuum-cron/: Dockerfile  docker-entrypoint.sh  vacuum.sh
examples/sample-server/docker/vacuum-cron/: Dockerfile  docker-entrypoint.sh  vacuum.sh
examples/sample-server/src/: cache.rs  config.rs  env.rs  main.rs
examples/sample-server/src/routes/: home.rs  mod.rs  protected.rs
examples/www-server/: .gitignore  Cargo.toml  Dockerfile  Makefile
examples/www-server/src/: cache.rs  config.rs  main.rs
examples/www-server/src/routes/: health.rs  home.rs  mod.rs  resources.rs  tokeninfo.rs
examples/www-server/src/routes/api/: mod.rs
src/: auth.rs  auth_builder.rs  auth_cache.rs  auth_session.rs  errors.rs  http_client.rs  lib.rs
src/auth_router/: handle_auth.rs  handle_callback.rs  handle_default.rs  mod.rs  test_helpers.rs
src/authentication/: builder.rs  cache.rs  mod.rs
src/authentication/logout/: handle_default_logout.rs  handle_oidc_logout.rs  mod.rs
src/authentication/moka/: mod.rs  two_tier.rs
src/authentication/redis/: mod.rs
src/authentication/router/: handle_auth.rs  handle_callback.rs  handle_default.rs  test_helpers.rs
src/authentication/sql_cache/: cleanup.rs  mod.rs
src/cache/: config.rs  mod.rs  two_tier.rs
src/extractors/: auth_session_extractor.rs  jwt_extractors.rs  mod.rs  shared.rs  token_extractors.rs
src/jwt/: INSTRUCTIONS.ms  configuration.rs  jwt_decoder.rs  layer.rs  mod.rs  oidc.rs
src/logout/: handle_default_logout.rs  handle_oidc_logout.rs
src/redis/: mod.rs
src/sql_cache/: cleanup.rs  mod.rs  queries.rs  schema.rs
tests/: sql_cache_sqlite.rs
