[package]
name = "axum-oidc-client"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "OpenID Connect (OIDC) and OAuth2 client middleware for Axum web framework"
documentation = "https://docs.rs/axum-oidc-client"
homepage = "https://github.com/RedSoftwareSystems/axum-oidc-client"
repository = "https://github.com/RedSoftwareSystems/axum-oidc-client"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json"] }
pkce-std = "0.2.1"
serde_html_form = "0.2.7"
axum-extra = { version = "0.10.0", features = [
    "cookie",
    "cookie-private",
    "cookie-signed",
] }
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
rand = { version = "0.9.1" }
http = { version = "1.2.0" }
futures-util = { version = "0.3.31" }
tower = { version = "0.5.2" }

urlencoding = "2.1"
uuid = { version = "1.18.1", features = ["v4"] }
time = "0.3.44"
redis = { version = "1.0.0-rc.3", optional = true, features = ["tokio-comp", "connection-manager"]}
moka = { version = "0.12.11", optional = true, features = ["future"]}
chrono = {version = "0.4.42", features = ["serde"]}
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { version = "0.1" }
html-escape = { version = "0.2", optional = true }

# sqlx is pulled in only when at least one sql-cache-* feature is enabled.
# The runtime is always tokio; the database driver is selected per feature.
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio", "chrono"] }

# jsonwebtoken and base64 are pulled in only when the `jwt` feature is enabled.
jsonwebtoken = { version = "10.3", optional = true, features = ["rust_crypto"] }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
mockito = "1"
tempfile = "3"

[features]
# ── Top-level features ────────────────────────────────────────────────────────
# `authentication` – the full OAuth2/OIDC authentication stack: middleware,
#   session management, cache trait, builder, router, extractors, and logout
#   handlers.  Enabled by default and implied by every cache/backend feature.
#
# `jwt` – JWT validation and inspection utilities.  Enabled by default.
#
# Both are in `default` so a plain `[dependencies] axum-oidc-client = "…"`
# gives users the complete feature set without any extra configuration.
default = ["authentication", "jwt", "moka-cache", "reqwest-rustls-tls"]

authentication = ["dep:html-escape"]

# ── reqwest TLS backends ──────────────────────────────────────────────────────
# Exactly one should be enabled. `reqwest-rustls-tls` is the default.
reqwest-rustls-tls          = ["reqwest/rustls-tls"]
reqwest-native-tls          = ["reqwest/native-tls"]
reqwest-native-tls-vendored = ["reqwest/native-tls-vendored"]

jwt = ["dep:jsonwebtoken", "dep:base64"]

# ── Moka in-process L1 cache ──────────────────────────────────────────────────
moka-cache = ["authentication", "dep:moka"]

# ── Redis cache backend ───────────────────────────────────────────────────────
redis = ["authentication", "dep:redis"]
redis-native-tls = ["authentication", "redis", "redis?/tokio-native-tls-comp"]
redis-rustls     = ["authentication", "redis", "redis?/tokio-rustls-comp"]

# ── SQL cache backends ────────────────────────────────────────────────────────
# Enable exactly one for production use.
# Multiple can be enabled simultaneously for testing purposes.
sql-cache-postgres = ["authentication", "dep:sqlx", "sqlx?/postgres"]
sql-cache-mysql    = ["authentication", "dep:sqlx", "sqlx?/mysql"]
sql-cache-sqlite   = ["authentication", "dep:sqlx", "sqlx?/sqlite"]

# Convenience feature that enables all three SQL backends at once (for tests).
sql-cache-all = ["sql-cache-postgres", "sql-cache-mysql", "sql-cache-sqlite"]

# Convenience feature that enables every feature in the crate.
full = ["authentication", "jwt", "moka-cache", "redis", "redis-native-tls", "redis-rustls", "sql-cache-all", "reqwest-rustls-tls"]
