[package]
name = "axum-api-server"
version = "0.1.0"
edition = "2024"
description = "Minimal API server demonstrating JwtLayer Bearer token validation"

[dependencies]
axum                = "0.8"
tokio               = { version = "1.41", features = ["full"] }
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
clap                = { version = "4", features = ["derive", "env"] }
tower               = "0.5"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
futures-util        = "0.3"
axum-oidc-client    = { path = "../..", features = ["jwt"] }
