[package]
name = "axum-sample-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.0", features = [
    "cookie",
    "cookie-private",
    "cookie-signed",
] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
axum-oidc-client = { path = "../.." , features=["redis-rustls"]}
clap = { version = "4.5.51", features = ["derive", "env"] }
clap_derive = "4.5.49"
dotenv = "0.15"
base64 = "0.21"
jsonwebtoken = "10.3.0"
